--- a/css/styles.css
+++ b/css/styles.css
@@ -26,3 +26,13 @@ header {
 section {
   padding: 80px 0;
 }
+
+/* 
+A rule to make the image or iframe adapt it's
+height based on a calculate of the viewport width.
+It starts at 25 pixels and increases by 20% of the viewport width.
+ */
+.fit-image {
+  object-fit: cover;
+  height: calc(25px + 20vw);
+}
